@startuml - Diagrama de Classe
!theme plain

class Comodo {
  - id : int
  - nome : string
  --
  + criar() : Comodo
  + listar() : List<Comodo>
  + atualizar(novoNome: string) : void
  + excluir() : void
}

class Dispositivo {
  - id : int
  - nome : string
  - estado : boolean
  - comodo_id : int
  --
  + criar() : Dispositivo
  + listarPorComodo(comodoId: int) : List<Dispositivo>
  + atualizar(novoNome: string) : void
  + ligar() : void
  + desligar() : void
  + excluir() : void
}

class Cena {
  - id : int
  - nome : string
  - ativa : boolean
  --
  + criar() : Cena
  + listar() : List<Cena>
  + atualizar(novoNome: string, ativa: boolean) : void
  + excluir() : void
  + executar() : void
  + adicionarAcao(a: Acao) : void
  + removerAcao(a: Acao) : void
}

class Acao {
  - id : int
  - ordem : int
  - acao : string   // "ligar" ou "desligar"
  - intervaloSegundos : int
  - cena_id : int
  - dispositivo_id : int
  --
  + executar() : void
}

Comodo "1" -- "1..*" Dispositivo : possui >
Cena "1" -- "1..*" Acao : tem >
Dispositivo "1" -- "1..*" Acao : é usado em >
@enduml